--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -23,7 +23,7 @@
 }
 
 .bills-feed {
-  width: 390px;
+  width: 400px;
   position: absolute;
   left: 120px;
   top: 52px;
@@ -51,6 +51,7 @@
 .bill-card {
   margin-top: 17px;
   margin-bottom: 17px;
+  margin-right:10px;
   background: #0D5AE5;
   border-radius: 8px;
   padding: 17px;
